Fix movie page header overflow

--- a/client/src/styles/Movie.module.css
+++ b/client/src/styles/Movie.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 1.5rem 20rem;
+  padding: 1.5rem 16rem;
   min-height: 90vh;
   display: flex;
   flex-direction: column;
@@ -19,7 +19,6 @@
   display: flex;
   flex-direction: column;
   justify-content: left;
-  height: 8rem;
   width: 100%;
 }
 
